File name changes

--- a/translations/kangyur/translations/034-014_toh26-the_suryagarbha_perfection_of_wisdom.xml
+++ b/translations/kangyur/translations/034-014_toh26-the_suryagarbha_perfection_of_wisdom.xml
@@ -253,11 +253,14 @@
                         that the sūtra is named for the bodhisattva Sūryagarbha known as one of the
                         bodhisattvas present in the assembly in each of the long prajñāpāramitā
                             sūtras—<title xml:lang="en">The Perfection of Wisdom in One Hundred
-                            Thousand Lines</title> (Toh 8),<ref rend="pending" target="https://read.84000.co/translation/toh8.html"/>
+                                Thousand Lines</title> (Toh 8),<note place="end" xml:id="UT22084-034-014-133">Gareth Sparham, trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh8.html">The Perfection of Wisdom in One
+                                    Hundred Thousand Lines</ref>
+                            </title>, Toh 8 (84000: Translating the Words of the Buddha, 2024).</note>
                         <title xml:lang="en">The Perfection of Wisdom in Twenty-Five Thousand
-                          Lines</title> (Toh 9),<note place="end" xml:id="UT22084-034-014-75">Padmakara Translation Group (2023), trans., <title xml:lang="en">
+                          Lines</title> (Toh 9),<note place="end" xml:id="UT22084-034-014-75">Padmakara Translation Group, trans., <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five Thousand Lines</ref>
-                          </title>, Toh 9 (84000: Translating the Words of the Buddha).</note>
+                          </title>, Toh 9 (84000: Translating the Words of the Buddha, 2023).</note>
                         <title xml:lang="en">The Perfection of Wisdom in Eighteen Thousand
                             Lines</title> (Toh 10),<note place="end" xml:id="UT22084-034-014-43">Sparham, Gareth. trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh10.html">The
@@ -265,12 +268,12 @@
                             </title>,
                             Toh 10 (84000: Translating the Words of the Buddha, 2022).</note> and
                             <title xml:lang="en">The Perfection of Wisdom in Ten Thousand
-                            Lines</title> (Toh 11).<note place="end" xml:id="UT22084-034-014-44">Padmakara Translation Group (2018), trans., <title xml:lang="en">
+                            Lines</title> (Toh 11).<note place="end" xml:id="UT22084-034-014-44">Padmakara Translation Group, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh11.html">The
                                     Transcendent Perfection of Wisdom in Ten Thousand
                                 Lines</ref>
                             </title>, Toh 11 (84000: Translating the Words of the
-                            Buddha).</note> The discrepancy presents something of a mystery,
+                                Buddha, 2018).</note> The discrepancy presents something of a mystery,
                         and the fact that the meditative stability that the Buddha teaches is also
                         called <distinct>the sun</distinct> (Skt. <foreign xml:lang="Sa-Ltn" type="term">sūrya</foreign>, Tib. <foreign xml:lang="Bo-Ltn" type="term">nyi ma</foreign>) begs the question as to whether the title of the
                         sūtra might refer to the meditative stability as well as to the sūtra’s
@@ -451,7 +454,7 @@
                       Lines</ref>
                   </title> (<title xml:lang="Sa-Ltn">Daśa­sāhasrikā­prajñā­pāramitā</title>, Toh 11). 84000: Translating the Words of the
                     Buddha, 2018.</bibl>
-                  <bibl xml:id="UT22084-034-014-77">‍—‍—‍—(2023), trans. <title xml:lang="en">
+                  <bibl xml:id="UT22084-034-014-77">‍—‍—‍—, trans. (2023). <title xml:lang="en">
                     <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five
                       Thousand Lines</ref>
                   </title> (<title xml:lang="Sa-Ltn">Pañca­viṃśati­sāhasrikā­prajñā­pāramitā</title>, Toh 9). 84000: Translating the Words of
@@ -462,6 +465,10 @@
                       Thousand Lines</ref>
                   </title> (<title xml:lang="Sa-Ltn">Aṣṭādaśa­sāhasrikā­prajñā­pāramitā</title>, Toh 10). 84000: Translating the Words of the
                     Buddha, 2022.</bibl>
+                    <bibl xml:id="UT22084-034-014-134">———, trans. (2024). <title xml:lang="en">
+                        <ref target="https://read.84000.co/translation/toh8.html">The Perfection of Wisdom in One Hundred Thousand Lines</ref>
+                    </title> (<title xml:lang="Sa-Ltn">Śata­sāhasrikā­prajñā­pāramitā</title>, Toh 8). 84000:
+                        Translating the Words of the Buddha.</bibl>
                 </div>
             </div>
             <div type="glossary">
@@ -631,7 +638,7 @@
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">dharmatā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos nyid</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཉིད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The quality or condition of things as they
                                 really are, which cannot be conveyed in conceptual, dualistic terms.
                                 Throughout Buddhist discourse this term is used both in regard to
