--- a/translations/kangyur/translations/034-015_toh27-the_candragarbha_perfection_of_wisdom.xml
+++ b/translations/kangyur/translations/034-015_toh27-the_candragarbha_perfection_of_wisdom.xml
@@ -276,7 +276,10 @@
                                                 listed as one of the bodhisattvas present in the
                                                 assembly in <title xml:lang="en">The Perfection of
                                                   Wisdom in One Hundred Thousand Lines</title> (Toh
-                                                8),<ref rend="pending" target="https://read.84000.co/translation/toh8.html"/> <title xml:lang="en">The
+                                                8),<note place="end" xml:id="UT22084-034-015-124">Gareth Sparham (2024), trans., <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh8.html">The Perfection of Wisdom in One
+                                                        Hundred Thousand Lines</ref>
+                            </title>, Toh 8 (84000: Translating the Words of the Buddha).</note> <title xml:lang="en">The
                                                   Perfection of Wisdom in Twenty-Five Thousand Lines
                                                 </title>(Toh 9),<note place="end" xml:id="UT22084-034-015-64">Padmakara Translation Group (2023), trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five Thousand Lines</ref>
@@ -513,6 +516,10 @@
                                       Thousand Lines</ref>
                                   </title> (<title xml:lang="Sa-Ltn">Pañca­viṃśati­sāhasrikā­prajñā­pāramitā</title>, Toh 9). 84000: Translating the Words of
                                     the Buddha, 2023.</bibl>
+                                        <bibl xml:id="UT22084-034-015-125">Sparham, Gareth., trans. <title xml:lang="en">
+                                                <ref target="https://read.84000.co/translation/toh8.html">The Perfection of Wisdom in One Hundred Thousand Lines</ref>
+                                        </title> (<title xml:lang="Sa-Ltn">Śata­sāhasrikā­prajñā­pāramitā</title>, Toh 8). 84000: Translating the Words of the
+                                                Buddha, 2024.</bibl>
                                 </div>
                         </div>
                         <div type="glossary">
