--- a/translations/kangyur/translations/034-016_toh28-the_samantabhadra_perfection_of_wisdom.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_samantabhadra_perfection_of_wisdom.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.7 <date>2023</date>
+                <edition>v 1.1.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -199,6 +199,9 @@
                 <change who="#konchog" when="2023-11-28T14:52:12.346Z" type="text-version" status="1.1.7" xml:id="UT22084-034-016-146">
                     <desc>A couple small fixes.</desc>
                 </change>
+                <change who="#celso" when="2024-02-27T22:24:16.173Z" type="text-version" status="1.1.8" xml:id="UT22084-034-016-147">
+                    <desc>updated Kangyur sigla to match rKTS</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -338,7 +341,7 @@
                     <p tid="24">Thus did I hear at one time. The Blessed One was dwelling in the
                         country of Magadha in a solitary place,<note place="end" xml:id="UT22084-034-016-27"> H: <foreign xml:lang="Bo-Ltn" type="quote">ma ga dha’i dgon pa</foreign>; Z: <foreign xml:lang="Bo-Ltn" type="quote">ma ga dha dgon par</foreign>; N: <foreign xml:lang="Bo-Ltn" type="quote">ma ga ta dgon par</foreign>; D, J,
                             He: <foreign xml:lang="Bo-Ltn" type="quote">ma ga dha dgon pa</foreign>;
-                                K<hi rend="subscript">Y</hi>: <foreign xml:lang="Bo-Ltn" type="quote">ma ga ta dgon pa</foreign>.</note> the essence of
+                                Y<!--KY-->: <foreign xml:lang="Bo-Ltn" type="quote">ma ga ta dgon pa</foreign>.</note> the essence of
                             Dharma,<note place="end" xml:id="UT22084-034-016-26"> The sequence of
                             phrases describing the place, places, or states in which the Blessed One
                             was staying could be interpreted in several different ways. Conze
@@ -442,8 +445,7 @@
                             Kangyur</expan>
                     </item>
                     <item xml:id="UT22084-034-016-74">
-                        <abbr>K<hi rend="subscript">Y</hi>
-                        </abbr>
+                        <abbr>Y<!--KY--></abbr>
                         <expan>Peking Yongle (g.yung lo) Kangyur</expan>
                     </item>
                     <item xml:id="UT22084-034-016-75">
@@ -559,7 +561,6 @@
             </div>
             <div type="glossary">
                 <list type="glossary">
-                    <item> </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-034-016-58">
                             <term type="translationMain">aspiration</term>
