--- a/translations/kangyur/translations/068-003_toh269-dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/translations/068-003_toh269-dispelling_the_darkness_of_the_ten_directions.xml
@@ -941,18 +941,15 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-003-148">
-                                                  <term type="translationMain">five
-                                                  degenerations</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified" n="1">snyigs ma lnga </term>
-                                                  <term xml:lang="bo" n="1">སྙིགས་མ་ལྔ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">pañcakaṣāya</term>
-                                                  <note type="definition">
-                                <p>Five particular aspects
-                                                  of life that indicate the degenerate nature of a
-                                                  given age. They are the degenerations of views (<foreign xml:lang="Sa-Ltn">dṛṣṭikaṣāya</foreign>), afflictions (<foreign xml:lang="Sa-Ltn">kleśakaṣāya</foreign>), sentient beings (<foreign xml:lang="Sa-Ltn">sattvakaṣāya</foreign>), lifespan (<foreign xml:lang="Sa-Ltn">āyuḥkaṣāya</foreign>), and time (<foreign xml:lang="Sa-Ltn">kalpakaṣāya</foreign>)</p>
+                        <gloss xml:id="UT22084-068-003-148" type="term" mode="match">
+                            <term type="translationMain">five degenerations</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pañcakaṣāya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">snyigs ma lnga</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྙིགས་མ་ལྔ།</term>
+                            <note type="definition">
+                                <p>Five particular aspects of life that indicate the degenerate nature of a given age. They are the degenerations of views (<foreign xml:lang="Sa-Ltn">dṛṣṭikaṣāya</foreign>), afflictions (<foreign xml:lang="Sa-Ltn">kleśakaṣāya</foreign>), sentient beings (<foreign xml:lang="Sa-Ltn">sattvakaṣāya</foreign>), lifespan (<foreign xml:lang="Sa-Ltn">āyuḥkaṣāya</foreign>), and time (<foreign xml:lang="Sa-Ltn">kalpakaṣāya</foreign>).</p>
                             </note>
-                                                </gloss>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-068-003-149">
