--- a/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
+++ b/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
@@ -1126,22 +1126,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-072-029-211">
-                                                  <term type="translationMain">Xuanzang</term>
-                                                  <note type="definition">
-                                <p>A great seventh-century
-                                                  Chinese scholar of Buddhism, Xuanzang journeyed
-                                                  overland from China to India on a pilgrimage to
-                                                  the holy places of the Buddha’s life. He returned
-                                                  to China in 645 <hi rend="small-caps">ce</hi>,
-                                                  bringing with him 657 Sanskrit manuscripts, of which this was
-                                                  one. With the support of the Tang Emperor Taizong,
-                                                  he established a large translation bureau in
-                                                  Chang’an (modern Xi’an) and spent the next
-                                                  nineteen years until his death translating them
-                                                  into Chinese.</p>
+                        <gloss xml:id="UT22084-072-029-211" type="person" mode="match">
+                            <term type="translationMain">Xuanzang</term>
+                            <note type="definition">
+                                <p>A great seventh-century Chinese scholar of Buddhism, Xuanzang journeyed overland from China to India on a pilgrimage to the holy places of the Buddha’s life. He returned to China in 645 <hi rend="small-caps">ce</hi>, bringing with him 657 Sanskrit manuscripts, of which this was one. With the support of the Tang Emperor Taizong, he established a large translation bureau in Chang’an (modern Xi’an) and spent the next nineteen years until his death translating them into Chinese.</p>
                             </note>
-                                                </gloss>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-072-029-213">
