--- a/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
+++ b/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
@@ -4,33 +4,78 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Lion's Roar</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-093-019-1">84000 Associate Translators</author>
+                <title key="toh704" type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra’i gzungs</title>
+                <title key="toh704" type="mainTitle" xml:lang="bo">སེང་གེ་སྒྲའི་གཟུངས།</title>
+                <title key="toh704" type="mainTitle" xml:lang="en">The Dhāraṇī of Siṃhanāda</title>
+                <title key="toh912" type="otherTitle" xml:lang="zh"/>
+                <title key="toh912" type="mainTitle" xml:lang="Bo-Ltn">seng ge sgras dam bcas pa’i gzungs</title>
+                <title key="toh912" type="mainTitle" xml:lang="bo">སེང་གེ་སྒྲས་དམ་བཅས་པའི་གཟུངས།</title>
+                <title key="toh912" type="mainTitle" xml:lang="en">The Dhāraṇī of Siṃhanāda’s Promise</title>
+                <title key="toh912" type="otherTitle" xml:lang="zh"/>
+                <author role="translatorMain" xml:id="UT22084-093-019-1"><!--84000 Associate Translators--></author>
                 <author role="translatorEng" xml:id="UT22084-093-019-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-093-019-11">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-093-019-20">Dawn Collins</editor>
                 <editor role="projectEditor" xml:id="UT22084-093-019-30">John Canti</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-093-019-41">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.a"/>
+                <publisher>
+                    <name>84000: Translating the Words of the Buddha</name>
+                    is a global non-profit initiative to translate all the
+                    Buddha’s words into modern languages, and to make them
+                    available to everyone. </publisher>
+                <availability status="2.a">
+                    <p type="tantricRestriction">
+                        <emph rend="bold">Warning:</emph> Readers are reminded that
+                        according to Vajrayāna Buddhist tradition there are
+                        restrictions and commitments concerning tantra.
+                        Practitioners who are not sure if they should read
+                        this translation are advised to consult the
+                        authorities of their lineage. The responsibility for
+                        reading this text or sharing it with others who may
+                        or may not fulfill the requirements lies in the
+                        hands of readers.</p>
+                    <licence>
+                        <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
+                        <p>This work is provided under the protection of
+                        a Creative Commons CC BY-NC-ND (Attribution -
+                        Non-commercial - No-derivatives) 3.0 copyright. It
+                        may be copied or printed for fair use, but only
+                        with full attribution, and not for commercial
+                        advantage or personal compensation. For full
+                        details, see the Creative Commons
+                        license.</p>
+                    </licence>
+                </availability>
                 <idno xml:id="UT22084-093-019"/>
-                <date/>
+                <note>An early mistake in the assigning of UT numbers within the
+                    84000 project means that these ids diverge slightly from the
+                    standard logic.</note>
+                <date>2024-05-21</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh704" type="text">
                     <ref>Toh 704</ref>
-                    <biblScope>vol.93, ff.171r-171v(pp.341-342)</biblScope>
+                    <biblScope>Degé Kangyur, vol. 93 (rgyud, rtsa), folios 171.a–171.b </biblScope>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="93" start-page="341" end-page="342"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12444" work="W22084"/>
+                </bibl>
+                <bibl key="toh912" type="text">
+                    <ref>Toh 912</ref>
+                    <biblScope>Degé Kangyur, vol. 100 (gzungs ’dus, e), folios 242.a–242.b</biblScope>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="101" start-page="481" end-page="482"/>
+                    </location>
+                    <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
+                    <idno source-id="O1JC114941JC12674" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt/>
@@ -97,6 +142,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-05-17T11:51:46.257Z" type="text-version" status="0.0.14" xml:id="UT22084-093-019-35">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:53:28.42Z" type="text-version" status="0.0.15" xml:id="UT22084-093-019-42">
+                    <desc>Auto (update-contributors)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
