--- a/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
+++ b/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-054-006-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.10 <date>2024</date>
+                <edition>v 1.1.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -185,6 +185,9 @@
                 <change who="#martina-cotter" when="2024-05-17T19:58:42.611Z" type="text-version" status="1.1.10" xml:id="UT22084-054-006-70">
                     <desc>User set version to 1.1.10</desc>
                 </change>
+                <change who="#john" when="2024-05-22T17:59:36.544Z" type="text-version" status="1.1.11" xml:id="UT22084-054-006-123">
+                    <desc>Paragraph in intro, note, and biblio entry added to crossreference Toh 64.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -218,8 +221,16 @@
                         gold into various forms, yet the nature of the gold itself does not change, so too the mind of awakening appears with various
                         unique attributes, yet the nature of the mind of awakening itself does not change. The Buddha then proclaims a single
                         four-line verse that succinctly articulates the nature of the mind of awakening and the way to practice it. </p>
+                    <milestone unit="chunk" xml:id="UT22084-054-006-104"/>
+                    <p tid="22">The analogy of pure gold whose nature does not change, despite being worked by a smith into different forms,
+                        is also found in <title xml:lang="en">Vidyutprāpta’s Questions</title> (<title xml:lang="Sa-Ltn">Vidyutprāptaparipṛcchā</title>, 
+                        Toh 64), but there illustrates the single nature of the dharmadhātu rather than that of 
+                        awakening.<note place="end" xml:id="UT22084-054-006-105">
+                            <title xml:lang="en">Vidyutprāpta’s Questions</title> (<title xml:lang="Sa-Ltn">Vidyutprāptaparipṛcchā</title>, 
+                            Toh 64<ref rend="pending" target="https:/read.84000.co/translation/toh64.html_F.6.a"/>), F.6.a.</note>
+                    </p>
                     <milestone unit="chunk" xml:id="UT22084-054-006-4"/>
-                    <p tid="8">As far as we can tell, no Sanskrit or Chinese version of <title xml:lang="en">The Gold Sūtra</title> exists. As there is no
+                    <p tid="23">As far as we can tell, no Sanskrit or Chinese version of <title xml:lang="en">The Gold Sūtra</title> exists. As there is no
                         colophon at the end of the sūtra, we have no information on when or by whom it was translated into Tibetan. The
                         sūtra is not listed in either of the two inventories of translations completed during the early, imperial period, and it appears to be found only in Kangyurs of
                         the Tshalpa line of transmission. There is a recent English translation of the sūtra, along with helpful notes, in Peter Skilling’s 2021 
@@ -280,6 +291,9 @@
                         [Comparative Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur khang (The Tibetan
                         Tripitaka Collation Bureau of the China Tibetology Research Center). 108 volumes. Beijing: krung go’i bod rig pa dpe skrun
                         khang (China Tibetology Publishing House), 2006–9, vol. 54, 758–59.</bibl>
+                    <bibl xml:id="UT22084-054-006-122">84000. <title xml:lang="en">Vidyutprāpta’s Questions</title> (<title xml:lang="Sa-Ltn">Vidyutprāptaparipṛcchā</title>, 
+                        <title xml:lang="Bo-Ltn">glog thob kyis zhus pa</title>, Toh 64<ref rend="pending" target="https:/read.84000.co/translation/toh64.html"/>). Translated by 
+                        Robert Kritzer. 84000: Translating the Words of the Buddha, (forthcoming). </bibl>
                     <bibl xml:id="UT22084-054-006-22">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection of Twenty-Five 
                         Sutras</title>. Somerville: Wisdom Publications, 2021. </bibl>
                 </div>
