--- a/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
+++ b/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
@@ -10,16 +10,17 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavidyutprāpta­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa glog thob kyis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《電得所問經》（大正藏：《大寶積經無盡伏藏會第二十》）</title>
-                <author role="translatorMain" xml:id="UT22084-043-001-1"/>
+                <author role="translatorMain" xml:id="UT22084-043-001-1">Robert Kritzer</author>
                 <author role="translatorEng" xml:id="UT22084-043-001-2">Robert Kritzer</author>
+                <editor role="projectEditor" xml:id="UT22084-043-001-18">Rory Lindsay</editor>
                 <sponsor xml:id="UT22084-043-001-12">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-043-001"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-07T09:51:18.85Z" type="text-version" status="0.0.9" xml:id="UT22084-043-001-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-07T09:52:03.609Z" type="text-version" status="0.0.10" xml:id="UT22084-043-001-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T06:46:20.887Z" type="translation-status" status="2.f" xml:id="UT22084-043-001-20">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T06:46:20.887Z" type="text-version" status="0.0.11" xml:id="UT22084-043-001-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
